--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/analyze.js", "use": "@vercel/node" }
-  ],
-  "routes": [
-    { "src": "/api/analyze", "dest": "api/analyze.js" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
-  ]
+  "name": "v2-notes-fullstack",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "vercel dev",
+    "deploy": "vercel --prod"
+  },
+  "dependencies": {
+    "axios": "^1.6.0"
+  }
 }
